<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".Profile.Profile">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/account_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_gravity="top"
        android:elevation="@dimen/toolbar_elevation" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/paddingMax">

            <ImageView
                android:id="@+id/account_image"

                android:layout_width="120dp"
                android:layout_height="120dp"
                android:contentDescription="@string/profile_pic"
                android:src="@drawable/cover" />

            <TextView
                android:id="@+id/account_names"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="start"
                android:padding="@dimen/paddingMedium"
                android:text="@string/name"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/account_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:clickable="true"
                android:drawableEnd="@android:drawable/ic_menu_edit"
                android:focusable="true"
                android:gravity="start"
                android:text="@string/username"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="18sp" />


            <TextView
                android:id="@+id/account_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:drawablePadding="@dimen/paddingMax"
                android:gravity="start"
                android:padding="@dimen/paddingMedium"
                android:text="@string/email"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/account_token"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:drawablePadding="@dimen/paddingMax"
                android:gravity="start"
                android:padding="@dimen/paddingMedium"
                android:text="@string/token"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="16sp" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/marginMax"
                android:textColor="?android:attr/textColorPrimary"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/preference"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/paddingMax"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/preferences"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="?android:attr/textColorPrimary"
                />

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/marginMax"
            android:layout_marginLeft="@dimen/marginMax"
            android:layout_marginTop="@dimen/marginMax"
            android:layout_marginEnd="@dimen/marginMax"
            android:layout_marginRight="@dimen/marginMax"
            android:background="@color/colorBackground" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/log_out"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:clickable="true"
                android:drawableStart="@drawable/ic_exit_to_app_black_24dp"
                android:drawablePadding="@dimen/paddingMax"
                android:drawableTint="@color/colorPrimary"
                android:focusable="true"
                android:padding="@dimen/paddingMax"
                android:text="@string/log_out"
                android:textColor="?android:attr/textColorPrimary"
                android:textStyle="bold"
                android:visibility="visible"
                tools:visibility="visible" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/marginMax"
                android:layout_marginLeft="@dimen/marginMax"
                android:layout_marginTop="@dimen/marginMax"
                android:layout_marginRight="@dimen/marginMax"
                android:textColor="?android:attr/textColorPrimary"
                />


        </LinearLayout>

        <TextView
            android:id="@+id/about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:drawableStart="@drawable/ic_info_outline_black_24dp"
            android:drawablePadding="@dimen/paddingMax"
            android:drawableTint="@color/colorPrimary"
            android:focusable="true"
            android:padding="@dimen/paddingMax"
            android:text="@string/about"
            android:textColor="?android:attr/textColorPrimary"
            />

    </LinearLayout>


</LinearLayout>