<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="1dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="1dp"
    android:background="?attr/colorOnSurface"
    app:cardCornerRadius="@dimen/cardCornerRadius"
    app:cardElevation="2dp"
    app:strokeWidth="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/artist_profile_pic"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="4dp"
                android:scaleType="centerCrop"
                android:src="@drawable/outline_account_circle_white_18dp"
                app:civ_border_color="#fff"
                app:civ_border_width="0dp" />

            <LinearLayout
                android:id="@+id/detail_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/post_artist"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:paddingStart="@dimen/paddingMax"
                    android:paddingLeft="@dimen/paddingMax"
                    android:paddingEnd="@dimen/paddingMax"
                    android:paddingRight="@dimen/paddingMax"
                    android:text="@string/artist"
                    android:textAlignment="textStart"
                    android:textAllCaps="true"
                    android:textSize="16sp"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textStyle="bold" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/song_name"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/name_of_the_song"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:textAllCaps="true"
                        android:textColor="?android:attr/textColorPrimary"

                        />

                    <TextView
                        android:id="@+id/time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/time"
                        android:textColor="?android:attr/textColorPrimary"

                        />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/song_album"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="3dp"
            android:padding="3dp"
            android:text="@string/album"
            android:textSize="14sp"
            android:textColor="?android:attr/textColorPrimary"

            />

        <ImageView
            android:id="@+id/song_art"
            android:layout_width="match_parent"
            android:layout_height="@dimen/cardImageSize"
            android:contentDescription="@string/logo"
            android:paddingStart="@dimen/paddingMax"
            android:paddingLeft="@dimen/paddingMax"
            android:paddingEnd="@dimen/paddingMax"
            android:paddingRight="@dimen/paddingMax"
            app:srcCompat="@drawable/cover" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genre"
                android:textSize="14sp"
                android:textStyle="bold"
                android:padding="5dp"
                android:layout_marginStart="5dp"
                android:textColor="?android:attr/textColorPrimary"

                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                >
                <LinearLayout
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/download"
                    android:orientation="horizontal"
                    android:padding="5dp">
                <ImageButton
                    style="@android:style/Widget.Material.ImageButton"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:paddingTop="5dp"
                    android:tint="?attr/colorControlNormal"

                    android:iconTintMode="?attr/colorControlNormal"

                    android:contentDescription="@string/download"
                    android:layout_marginTop="1dp"
                    android:padding="5dp"
                    android:src="@drawable/outline_save_alt_white_18dp" />
                <TextView
                    android:textColor="?android:attr/textColorPrimary"

                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/download"
                    android:textStyle="bold"
                    android:layout_marginTop="4dp"
                    android:layout_marginStart="3dp"
                    />
            </LinearLayout>

                <LinearLayout
                    android:padding="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/play"
                    android:clickable="true"
                    android:focusable="true"

                    android:orientation="horizontal">
                <ImageButton
                    android:id="@+id/play_button"
                    style="@android:style/Widget.Material.ImageButton"
                    android:layout_width="24dp"
                    android:layout_height="24dp"

                    android:tint="?attr/colorControlNormal"
                    android:contentDescription="@string/play"
                    android:layout_marginTop="1dp"
                    android:padding="5dp"
                    android:src="@drawable/outline_play_arrow_white_18dp" />
                <TextView
                    android:textColor="?android:attr/textColorPrimary"

                    android:id="@+id/play_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/play"
                    android:textStyle="bold"
                    android:layout_marginTop="4dp"
                    android:layout_marginStart="3dp"
                    android:layout_marginEnd="3dp"

                    />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/comment"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="horizontal">
                <ImageButton
                    android:id="@+id/comment_button"
                    style="@android:style/Widget.Material.ImageButton"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="30dp"
                    android:contentDescription="@string/comment"
                    android:layout_marginTop="6dp"
                    android:padding="5dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_marginBottom="5dp"
                    android:tint="?attr/colorControlNormal"
                    android:src="@drawable/ic_baseline_add_comment_24" />
                <TextView
                    android:textColor="?android:attr/textColorPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comment"
                    android:textStyle="bold"
                    android:layout_marginTop="9dp"
                    android:layout_marginStart="3dp"

                    />
                </LinearLayout>

                
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>
</com.google.android.material.card.MaterialCardView>